# alcp

./: .gitignore  .travis.yml  CMakeLists.txt  EDelem.h  Exceptions.h  F.h  Felem.h  Fpelem.h  README.md  a.out  alcp  algoritmos.txt  ejemplos.txt  err  fpelem.hpp  generalPurpose.cpp  generalPurpose.hpp  makefile  quotientRing.hpp  types.hpp
gtest/lib/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: .cproject  .gitignore  CMakeCache.txt  CMakeLists.txt  FXelem.hpp  Fp.hpp  FpXelem.hpp  Makefile  a.out  aux.txt  bchCodes.cpp  bchCodes.hpp  berlekamp.cpp  berlekamp.hpp  berlekamp.hpp.gch  berlekampMassey.hpp  cambios.cpp  cmake_install.cmake  command.hpp  eDElem.hpp  err  exceptions.hpp  exceptions.hpp.gch  factorizationFq.cpp  factorizationFq.hpp  factorizationFq.hpp.gch  felembase.hpp  field.hpp  fieldElem.hpp  fieldpElem.hpp  fp.cpp  fp.hpp  fp.hpp.gch  fpelem.cpp  fpelem.hpp  fpelem.hpp.gch  fpxelem.cpp  fpxelem.hpp  fpxelem.hpp.gch  fq.cpp  (+29 more)
src (copy)/: berlekamp.cpp  exceptions.hpp  fpelem.cpp  fpelem.hpp  fpxelem.cpp  fpxelem.hpp  fpxelem2.cpp  fpxelem2.hpp  integerCRA.cpp  main.cpp  modularGCD.cpp  polRing.hpp
src2/: exceptions.hpp  factorizationFq.hpp  fp.cpp  fp.hpp  fpelem.hpp  fpxelem.hpp  fq.cpp  fq.hpp  fqelem.hpp  fqxelem.hpp  generalPurpose.cpp  generalPurpose.hpp  henselSubsets.cpp  main.cpp  modularGCD.cpp  modularGCD.hpp  polRing.hpp  types.hpp  zelem.cpp  zelem.hpp
tests/: CMakeLists.txt  a.out  tests.cpp
